	  GCC 4.0 compilance.
	  INTERPOLATE function.
	  Fixed eof detection on input.
	  Implemented strided index support.
	  Improved raise to power (^ operator) for integer types.

0.8.11:   Added CONTOUR procedure.
          Added CREATE_STRUCT, RADON, LAGUERRE, STRCMP, GAUSS_PDF, GAUSS_CVF
	  functions.
 	  Added STRUCTURES keyword to HELP.
	  Added NAN keyword to TOTAL.
	  Sub-millisecond resolution for SYSTIME function
	  Added !DIR system variable
          Much faster array indexing.
	  Much faster operators (+-/*^...)
	  Faster FFT (requires FFTW library: http://www.fftw.org/download.html)

0.9:      Added HEAP_GC, PRODUCT, FILEPATH, MEDIAN (no filtering), READ_ASCII,
	  PUSHD, POPD, PRINTD, PRIMES, NORM, T_PDF, POLY_2D routines.
	  Support for SAVE and RESTORE through Craig Markwardt's CMSVLIB
	  library.
	  Added SMOOTH and DERIV as external functions.
	  Full support of F77_UNFORMATTED.
	  Support for XDR I/O.
          Fixed positional index (value and dimension) returned by STREGEX.
	  HELP without parameters and keywords puts out a list of all local
	  variables as well as compiled procedures and functions.
	  Add support for PROCEDURES & FUNCTIONS keywords in HELP
	  Made GDL compile under x86_64 linux.
	  Fixed incompatibility with # operator and one-dim vectors.
	  Speedup for ^ operator for integer types.
	  Speedup (>100x!) for REVERSE_INDICES of HISTOGRAM.
	  Implement INPUT keyword in HISTOGRAM.
	  Support for non-rectangular (x,y 2d arrays) calls to SURFACE and
	  CONTOUR.
	  Support for DICOM files (GDLffDICOM object).
	  INTEGER keyword for TOTAL.
	  Add support for variable-length VMS files.	  
	  Add support for CHANNEL keyword in TV/TVSCL.
	  Add support for DIMENSION keyword in FFT.
	  Add REGEX keyword support to STRTOK.
	  Add preliminary support for MPI.
	  Add initial support for SOCKET.
	  Preliminary support for map projections. (requires libproj4 from
	  (http://members.verizon.net/~vze2hc4d/proj4/lbp4_050319S.tar.gz)